@@ -33,21 +33,6 @@
   
   <build>
   	<plugins>
-	   	<plugin>
-	   		<groupId>org.apache.maven.plugins</groupId>
-	   		<artifactId>maven-surefire-plugin</artifactId>
-	   		<version>3.5.2</version>
-	   		<configuration>
-	   			<argLine>
-	   				${argLine}
-	   				--add-opens java.desktop/java.awt=ALL-UNNAMED
-	   				--add-opens java.desktop/javax.swing=ALL-UNNAMED
-	   			</argLine>
-	   			<systemPropertyVariables>
-	   				<java.awt.headless>false</java.awt.headless>
-	   			</systemPropertyVariables>
-	   		</configuration>
-	   	</plugin>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
